
20071120:
	* fixed crash if /var/tmp didn't exist.
	* memory leak fixed.
	* major simplification of rand.c.
	* windows support.
	* portability fixes.
	* improved randomness on platforms with drand48().
	* fixed longstanding 'first element' bug on fbsd.

20071119:
	* rpm support updated to the current stuff.
	* debian support update to current stuff.
	* gettext support update to current stuff.
	* fixed a minor possible memory leak.
	* gaurding against a buffer overflow on very large lines.
	* fix bug with FILE* being passed to fchmod.
	* re-enabled gettext.

20050608:
	* broke the source up into smaller bites.

20040823:
	* fixed an option in the man file, thanks to Mai <bio2x2f02@sneakemail.com>.

20040814:
	* version 1.8 released.
	* here is the release thing...
		Hrm, 4.5 years of various things... I dont remember it all and the cvs.
			repo lost a chunk...
			gettext cleanup.
			lsm file.
			rcs tags.
			rpm4 fixes.
			config headers.
			some doxygen.
			brlcad path foo.
			char rand type.
			removal of globals.
			change from unix fd's to C FILE*'s.
			pass pipes instead of using a global.

20000215:
	* version 1.7 released.
	* improved random seeding.
	* improved the autoconf/automake stuff.
	* i18n/l10n.

19991010:
	* version 1.6 released.
	* GNU autoconf/automake support.
	* first manpage included.
	* fixed bug causing bad getopt handling and segfault on -f.
	* added -o parameter.
	* made it fbsd friendly.

19990118:
	* version 1.5 released.
	* getopt style command parsing.
	* parameter scrambling was removed.
	* (yes there was a 1.4, and 1.3, but they didn't get released publically.)

19981219:
	* version 1.2 released.
	* New faster algorithm.
	* (yes, there was a 1.1, but it didn't get released publically.)

19981211:
	* Initial public release, version 1.0.

$Id: ChangeLog,v 1.12 2007/11/20 20:59:50 erik Exp $