@@ -4,7 +4,7 @@ Wed, 17 May 2000 20:06:11 -0500.
 It was downloaded from http://math.missouristate.edu/~erik/files
 
 Upstream Author: Erik Greenwald <erik@smluc.org>
-Copyright: Copyright (C) 1998-2007 Erik Greenwald
+Copyright: Copyright (C) 1998-2009 Erik Greenwald
 
 License:
 
