@@ -1,6 +1,6 @@
 .\"===========================================================================
 .\" rand
-.\" Copyright (C) 1998-2007 Erik Greenwald <erik@smluc.org>
+.\" Copyright (C) 1998-2009 Erik Greenwald <erik@smluc.org>
 .\"
 .\" This program is free software; you can redistribute it and/or modify
 .\" it under the terms of the GNU General Public License as published by
@@ -18,7 +18,7 @@
 .\"===========================================================================
 .\" rand.1 man page for rand
 .\" http://math.missouristate.edu/~erik/software.php?id=7
-.\" $Id: rand.1,v 1.6 2007/11/20 00:31:12 erik Exp $
+.\" $Id: rand.1,v 1.7 2009/08/31 17:40:38 erik Exp $
 .\"===========================================================================
 .Dd December 11, 1998
 .Dt RAND 1
