@@ -5,7 +5,7 @@
  *        blah | rand [-lw] [-o output file]
  *        rand [-lw] -f <file> [-o output file]
  *
- *     Copyright (C) 1998-2007 Erik Greenwald <erik@smluc.org>
+ *     Copyright (C) 1998-2009 Erik Greenwald <erik@smluc.org>
  *
  *     This program is free software; you can redistribute it and/or modify
  *     it under the terms of the GNU General Public License as published by
@@ -24,7 +24,7 @@
  ******************************************************************************/
 
 /*
- * $Id: help.c,v 1.17 2007/11/20 00:28:10 erik Exp $
+ * $Id: help.c,v 1.18 2009/08/31 17:40:38 erik Exp $
  */
 
 #ifdef HAVE_CONFIG_H
@@ -47,7 +47,7 @@ void
 show_help ()
 {
     fprintf (stdout, gettext ("\
-%s %s (C) 1998-2007 Erik Greenwald <erik@math.missouristate.edu>\n\
+%s %s (C) 1998-2009 Erik Greenwald <erik@math.missouristate.edu>\n\
 %s comes with ABSOLUTELY NO WARRANTY. Please read the GPL for details.\n\
 \n\
 Usage:\n\
@@ -71,6 +71,6 @@ show_version ()
 {
     fprintf (stdout,
 	gettext
-	("%s %s (C) 1998-2007 Erik Greenwald <erik@math.missouristate.edu>\n"),
+	("%s %s (C) 1998-2009 Erik Greenwald <erik@math.missouristate.edu>\n"),
 	PACKAGE, VERSION);
 }
