@@ -5,7 +5,7 @@
  *        blah | rand [-lw] [-o output file]
  *        rand [-lw] -f <file> [-o output file]
  *
- *     Copyright (C) 1998-2007 Erik Greenwald <erik@smluc.org>
+ *     Copyright (C) 1998-2009 Erik Greenwald <erik@smluc.org>
  *
  *     This program is free software; you can redistribute it and/or modify
  *     it under the terms of the GNU General Public License as published by
@@ -24,7 +24,7 @@
  ******************************************************************************/
 
 /*
- * $Id: seed.c,v 1.13 2007/11/20 20:59:05 erik Exp $
+ * $Id: seed.c,v 1.14 2009/08/31 17:40:38 erik Exp $
  */
 
 #ifdef HAVE_CONFIG_H
